--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #b72f5b;
+    background-color:  #8b1746;
     color: #ffffff; /* Change to your desired text color */
     padding: 20px;
     display: flex;
