--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -86,6 +86,71 @@
 }
 
 .submit-button:hover {
-  background-color: #982347;
+  background-color: #8b1746;
 }
+
+
+.heading{
+  margin: 50px;
+}
+
+.message-box {
+ 
+  
+  margin-top: 10px;
+}
+
+.message-input {
+  width: 100%;
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.recommend-button {
+  padding: 10px 20px;
+  margin: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #8b1746;
+  color: white;
+  transition: background-color 0.3s;
+}
+
+.recommend-button:hover {
+  background-color:  #EAE90D;
+}
+
+.recommend-button:active {
+  background-color: #6a0f39;
+}
+
+.recommend-button:focus {
+  outline: none;
+}
+
+
+
+/* Style the emojis within buttons */
+.recommend-button svg {
+  margin-right: 8px;
+}
+.emoji-icon {
+  color: #FFA500; /* Set the color you want here */
+  /* Add other styling if needed */
+}
+
 
